--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -28,16 +28,7 @@
   <body>
     <div id="cesiumContainer"></div>
     <script>
-      const viewer = new Cesium.Viewer("cesiumContainer",{
-	      baseLayerPicker: true,
-		  timeline : false,
-		  animation : false,
-		  homeButton: false,
-		  vrButton: true,
-		  geocoder:false,
-		  sceneModePicker:false,
-		  navigationHelpButton:false
-	});
+      const viewer = new Cesium.Viewer("cesiumContainer");
     </script>
   </body>
 </html>
