--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -28,7 +28,16 @@
   <body>
     <div id="cesiumContainer"></div>
     <script>
-      const viewer = new Cesium.Viewer("cesiumContainer");
+      const viewer = new Cesium.Viewer("cesiumContainer",{
+		  baseLayerPicker: true,
+		  timeline : false,
+		  animation : false,
+		  homeButton: false,
+		  vrButton: true,
+		  geocoder:false,
+		  sceneModePicker:false,
+		  navigationHelpButton:false
+      });
     </script>
   </body>
 </html>
