--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -29,7 +29,7 @@
     <div id="cesiumContainer"></div>
     <script>
       const viewer = new Cesium.Viewer("cesiumContainer",{
-		  baseLayerPicker: true,
+		  baseLayerPicker: false,
 		  timeline : false,
 		  animation : false,
 		  homeButton: false,
