--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -34,7 +34,7 @@
 		  animation : false,
 		  homeButton: false,
 		  vrButton: true,
-		  geocoder:false,
+		  geocoder:true,
 		  sceneModePicker:false,
 		  navigationHelpButton:false
       });
