--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -30,7 +30,7 @@
     <script>
       const viewer = new Cesium.Viewer("cesiumContainer",{
 		  baseLayerPicker: false,
-		  timeline : false,
+		  timeline : true,
 		  animation : false,
 		  homeButton: false,
 		  vrButton: true,
