--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -38,6 +38,19 @@
 		  sceneModePicker:false,
 		  navigationHelpButton:false
       });
+      
+      var point = viewer.entities.add({
+      name:"福岡市城南区七隈", //レイヤ名
+      description:"ここは福岡市城南区七隈です。",　//レイヤの説明
+        position : Cesium.Cartesian3.fromDegrees(130.3653,33.5497,0), //経度,緯度,高さ
+        point : {
+            pixelSize : 10, //ポイントのサイズ
+            color : Cesium.Color.BLUE //ポイントの色
+        }
+    });
+
+    viewer.zoomTo(viewer.entities);　//レイヤにズーム
+      
     </script>
   </body>
 </html>
