--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -29,7 +29,7 @@
     <div id="cesiumContainer"></div>
     <script>
       const viewer = new Cesium.Viewer("cesiumContainer",{
-		  baseLayerPicker: false,
+		  baseLayerPicker: true,
 		  timeline : true,
 		  animation : false,
 		  homeButton: false,
@@ -48,6 +48,16 @@
             color : Cesium.Color.BLUE //ポイントの色
         }
     });
+
+      viewer.camera.flyTo({
+      destination: Cesium.Cartesian3.fromDegrees(130.3653,33.5477,1000.0), //経度,緯度,高さ
+        orientation : {
+            heading : Cesium.Math.toRadians(-45.0)
+            pitch : Cesium.Math.toRadians(-45.0)
+            roll : 0.0
+        }
+    });
+
 
     viewer.zoomTo(viewer.entities);　//レイヤにズーム
       
