--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -42,7 +42,11 @@
       var point = viewer.entities.add({
       name:"福岡市城南区七隈", //レイヤ名
       description:"ここは福岡市城南区七隈です。",　//レイヤの説明
-        position : Cesium.Cartesian3.fromDegrees(130.363574,33.542806,1000.0), //経度,緯度,高さ
+
+      viewer.camera.flyTo({
+      destination : Cesium.Cartesian3.fromDegrees(130.363574,33.542806,1000.0), //経度,緯度,高さ
+      });
+      
         point : {
             pixelSize : 10, //ポイントのサイズ
             color : Cesium.Color.BLUE //ポイントの色
