--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -43,6 +43,13 @@
       name:"福岡市城南区七隈", //レイヤ名
       description:"ここは福岡市城南区七隈です。",　//レイヤの説明
         position : Cesium.Cartesian3.fromDegrees(130.365326,33.518014,1000.0), //経度,緯度,高さ
+        
+        orientation : {
+        	heading : Cesium.Math.toRadians(-45.0),
+        	pitch : Cesium.Math.toRadians(-45.0),
+        	roll : 0.0
+        	}
+        
         point : {
             pixelSize : 10, //ポイントのサイズ
             color : Cesium.Color.BLUE //ポイントの色
