--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -30,11 +30,11 @@
     <script>
       const viewer = new Cesium.Viewer("cesiumContainer",{
 		  baseLayerPicker: true,
-		  timeline : true,
+		  timeline : false,
 		  animation : false,
 		  homeButton: false,
 		  vrButton: true,
-		  geocoder:true,
+		  geocoder:false,
 		  sceneModePicker:false,
 		  navigationHelpButton:false
       });
