--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -49,7 +49,7 @@
         }
     });
 
-	viewer.dataSources.add(Cesium.KmlDataSource.load("./KML/aburayama2.kmz"));
+	viewer.dataSources.add(Cesium.KmlDataSource.load("./KML/aburayama.kmz"));
 
     viewer.zoomTo(viewer.entities);　//レイヤにズーム
       
